/**
* Generated by go-doudou v2.0.1.
* Don't edit!
*
* Version No.: v20221122
*/
syntax = "proto3";

package wordcloud_task;
option go_package = "github.com/unionj-cloud/go-doudou-tutorials/wordcloud/wordcloud-task/transport/grpc";

import "google/protobuf/any.proto";


message Filter {
  int32 userId = 1 [json_name="userId"];
}

message Order {
  string col = 1 [json_name="col"];
  string sort = 2 [json_name="sort"];
}

message Page {
  // 排序规则
  repeated Order orders = 1 [json_name="orders"];
  // 页码
  int32 pageNo = 2 [json_name="pageNo"];
  // 每页行数
  int32 size = 3 [json_name="size"];
}

// 分页筛选条件
message PageQuery {
  Filter filter = 1 [json_name="filter"];
  Page page = 2 [json_name="page"];
}

message PageRet {
  google.protobuf.Any items = 1 [json_name="items"];
  int32 pageNo = 2 [json_name="pageNo"];
  int32 pageSize = 3 [json_name="pageSize"];
  int32 total = 4 [json_name="total"];
  bool hasNext = 5 [json_name="hasNext"];
}

message TaskFail {
  // task ID
// 任务ID
  int32 taskId = 1 [json_name="taskId"];
  // error message
// 错误信息
  string error = 2 [json_name="error"];
}

message TaskFailRpcResponse {
  // return OK if success
// 成功返回OK
  string data = 1 [json_name="data"];
}

message TaskPageRet {
  repeated TaskVo items = 1 [json_name="items"];
  int32 pageSize = 2 [json_name="pageSize"];
  int32 total = 3 [json_name="total"];
  bool hasNext = 4 [json_name="hasNext"];
  int32 pageNo = 5 [json_name="pageNo"];
}

message TaskPayload {
  // 用户ID
// user ID
  int32 userId = 1 [json_name="userId"];
  // source file url 原文件链接
  string srcUrl = 2 [json_name="srcUrl"];
  string lang = 3 [json_name="lang"];
  int32 top = 4 [json_name="top"];
}

message TaskSaveRpcResponse {
  // task ID 任务ID
  int32 data = 1 [json_name="data"];
}

message TaskSuccess {
  // task ID
// 任务ID
  int32 taskId = 1 [json_name="taskId"];
  // word cloud image url
// 词云图链接
  string imgUrl = 2 [json_name="imgUrl"];
}

message TaskSuccessRpcResponse {
  // return OK if success
// 成功返回OK
  string data = 1 [json_name="data"];
}

message TaskVo {
  int32 id = 1 [json_name="id"];
  string srcUrl = 2 [json_name="srcUrl"];
  string imgUrl = 3 [json_name="imgUrl"];
  string lang = 4 [json_name="lang"];
  int32 top = 5 [json_name="top"];
  int32 status = 6 [json_name="status"];
  string error = 7 [json_name="error"];
  int32 userId = 8 [json_name="userId"];
  string createAt = 9 [json_name="createAt"];
}

service WordcloudTaskService {
  // TaskSave save word cloud task 保存词云图任务
  rpc TaskSaveRpc(TaskPayload) returns (TaskSaveRpcResponse);
  // TaskSuccess task success 任务执行成功接口
  rpc TaskSuccessRpc(TaskSuccess) returns (TaskSuccessRpcResponse);
  // TaskFail task fail 任务执行失败接口
  rpc TaskFailRpc(TaskFail) returns (TaskFailRpcResponse);
  // TaskPage
  rpc TaskPageRpc(PageQuery) returns (TaskPageRet);
}
